# gtk4_webkitgtk_getting_started

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
resources/: main_window.ui
src/: main.c
